--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,12 +1,2 @@
-html,
-body {
-  min-height: 100%; }
-
-body {
-  background: #ffffff;
-  color: black;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  font-size: 12px;
-  margin: 10px; }
-
+html,body{min-height:100%}body{background:#fff;color:#000;font-family:Arial, "Helvetica Neue", Helvetica, sans-serif;font-size:12px;margin:10px}
 /*# sourceMappingURL=style.css.map */
