--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -7,9 +7,6 @@ body {
 body {
   background: whitesmoke; }
 
-.footer .logo {
-  width: 160px; }
-
 .dr-hidden {
   display: none; }
 
@@ -19,5 +16,18 @@ a, a:focus, a:hover, a:active, a.is-active {
 .tabs li.is-active a {
   border-bottom-color: #00527D !important;
   color: #00527D !important; }
+
+.select select:focus, .select select.is-focused, .select select:active, .select select.is-active {
+  border-color: #00527D; }
+
+.select:after {
+  border-color: #00527D !important; }
+
+pre {
+  padding: 10px;
+  font-size: 1em; }
+
+.footer .logo {
+  width: 160px; }
 
 /*# sourceMappingURL=style.css.map */
