--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -10,18 +10,41 @@ body {
 .dr-hidden {
   display: none !important; }
 
-a, a:focus, a:hover, a:active, a.is-active {
+a, a:focus, a:hover, a:active, a.is-active,
+textarea,
+textarea:focus,
+textarea:hover,
+textarea:active,
+textarea.is-active {
   color: #00527D !important; }
+
+.input, .input:after, .input:focus, .input:hover, .input:active, .input.is-active,
+.textarea,
+.textarea:after,
+.textarea:focus,
+.textarea:hover,
+.textarea:active,
+.textarea.is-active,
+.select,
+.select:after,
+.select:focus,
+.select:hover,
+.select:active,
+.select.is-active,
+.select select,
+.select select:after,
+.select select:focus,
+.select select:hover,
+.select select:active,
+.select select.is-active {
+  border-color: #00527D; }
+
+button.is-primary {
+  background-color: #00527D !important; }
 
 .tabs li.is-active a {
   border-bottom-color: #00527D !important;
   color: #00527D !important; }
-
-.select select:focus, .select select.is-focused, .select select:active, .select select.is-active {
-  border-color: #00527D; }
-
-.select:after {
-  border-color: #00527D !important; }
 
 pre {
   padding: 10px;
