Updating bulma, template.html, & SCSS/CSS

--- a/www/assets/css/style.scss
+++ b/www/assets/css/style.scss
@@ -65,6 +65,12 @@ code {
 
 .key {
   font-weight: bold;
+
+  &.title,
+  &.subtitle {
+    font-size: unset;
+    line-height: unset;
+  }
 }
 
 .spaces {
