--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -51,6 +51,9 @@ code {
 
 .key {
   font-weight: bold; }
+  .key.title, .key.subtitle {
+    font-size: unset;
+    line-height: unset; }
 
 .spaces {
   display: inline-block;
