Moving template.html into `www`, fixing SCSS/SSC such that the view is in a proper flexbox

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -7,6 +7,14 @@ body {
 body {
   background: whitesmoke; }
 
+.app {
+  width: 100% !important;
+  max-width: 100% !important;
+  min-height: 100vh; }
+  .app > * {
+    width: 100% !important;
+    max-width: 100%; }
+
 .dr-hidden {
   display: none !important; }
 
