--- a/www/assets/css/style.scss
+++ b/www/assets/css/style.scss
@@ -12,6 +12,17 @@ body {
   background: whitesmoke;
 }
 
+.app {
+  width: 100% !important;
+  max-width: 100% !important;
+  min-height: 100vh;
+
+  & > * {
+    width: 100% !important;
+    max-width: 100%;
+  }
+}
+
 .dr-hidden {
   display: none !important;
 }
