--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -2,27 +2,93 @@ html,
 body {
   min-height: 100vh;
   overflow-y: auto;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
+
+.table {
+  background: none;
+}
 
 body {
-  background: whitesmoke; }
+  background: whitesmoke;
+  color: black;
+}
+body.dark {
+  background: #292929 !important;
+  color: white !important;
+}
+body.dark h1 {
+  color: white !important;
+}
+body.dark a:focus, body.dark a:hover, body.dark a:active, body.dark a.is-active {
+  color: white !important;
+}
+body.dark .label, body.dark .table, body.dark .table th, body.dark .box {
+  color: white !important;
+}
+body.dark .box {
+  background: #363636 !important;
+}
+body.dark .item a {
+  color: #3298dc !important;
+}
+body.dark .input:after, body.dark .input:focus, body.dark .input:hover, body.dark .input:active, body.dark .input.is-active,
+body.dark .textarea:after,
+body.dark .textarea:focus,
+body.dark .textarea:hover,
+body.dark .textarea:active,
+body.dark .textarea.is-active,
+body.dark .select:after,
+body.dark .select:focus,
+body.dark .select:hover,
+body.dark .select:active,
+body.dark .select.is-active,
+body.dark .select select:after,
+body.dark .select select:focus,
+body.dark .select select:hover,
+body.dark .select select:active,
+body.dark .select select.is-active {
+  border-color: #3298dc !important;
+}
+body.dark button.is-primary {
+  background-color: #3298dc !important;
+}
+body.dark .tabs li.is-active a {
+  border-bottom-color: #3298dc !important;
+  color: #3298dc !important;
+}
+body.dark code {
+  background: #4a4a4a !important;
+  color: white !important;
+}
+body.dark footer {
+  background: #272727 !important;
+}
+body.dark footer a {
+  color: #3298dc !important;
+}
 
 .app {
   width: 100% !important;
   max-width: 100% !important;
-  min-height: 100vh; }
-  .app > * {
-    width: 100% !important;
-    max-width: 100%; }
+  min-height: 100vh;
+}
+.app > * {
+  width: 100% !important;
+  max-width: 100%;
+}
 
 .dr-hidden {
-  display: none !important; }
+  display: none !important;
+}
 
 a:focus, a:hover, a:active, a.is-active {
-  color: #00527D !important; }
+  color: #00527D !important;
+}
 
 .item a {
-  color: #00527D !important; }
+  color: #00527D !important;
+}
 
 .input:after, .input:focus, .input:hover, .input:active, .input.is-active,
 .textarea:after,
@@ -40,42 +106,54 @@ a:focus, a:hover, a:active, a.is-active {
 .select select:hover,
 .select select:active,
 .select select.is-active {
-  border-color: #00527D; }
+  border-color: #00527D;
+}
 
 button.is-primary {
-  background-color: #00527D !important; }
+  background-color: #00527D !important;
+}
 
 .tabs li.is-active a {
   border-bottom-color: #00527D !important;
-  color: #00527D !important; }
+  color: #00527D !important;
+}
 
 pre {
   padding: 10px;
-  font-size: 1em; }
+  font-size: 1em;
+}
 
 code {
-  background: white;
-  color: black; }
+  background: whitesmoke;
+  color: white;
+}
 
 .key {
-  font-weight: bold; }
-  .key.title, .key.subtitle {
-    font-size: unset;
-    line-height: unset; }
+  font-weight: bold;
+}
+.key.title, .key.subtitle {
+  font-size: unset;
+  line-height: unset;
+}
 
 .spaces {
   display: inline-block;
-  width: 1.1em; }
+  width: 1.1em;
+}
 
 .spaced {
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+}
 
 .textarea {
-  height: 300px; }
+  height: 300px;
+}
 
 .footer .logo {
-  width: 160px; }
+  width: 160px;
+}
 .footer a {
-  color: #00527D !important; }
+  color: #00527D !important;
+}
 
 /*# sourceMappingURL=style.css.map */
