--- a/www/assets/css/style.scss
+++ b/www/assets/css/style.scss
@@ -1,5 +1,11 @@
 $ten: 10px;
 $blue: #00527D;
+$darkBlue: #3298dc;
+$lightCodeBackground: whitesmoke;
+$lightCodeColor: white;
+$darkBackground: #292929;
+$darkCode: #4a4a4a;
+$darkFooter: #272727;
 
 html,
 body {
@@ -8,8 +14,80 @@ body {
   overflow-x: hidden;
 }
 
+.table {
+  background: none;
+}
+
 body {
   background: whitesmoke;
+  color: black;
+
+  &.dark {
+    background: $darkBackground !important;
+    color: $lightCodeColor !important;
+
+    h1 {
+      color: $lightCodeColor !important;
+    }
+
+    a {
+      &:focus,
+      &:hover,
+      &:active,
+      &.is-active {
+        color: $lightCodeColor !important;
+      }
+    }
+
+    .label, .table, .table th, .box {
+      color: $lightCodeColor !important;
+    }
+
+    .box {
+      background: lighten($darkBackground, 5%) !important;
+    }
+
+    .item {
+      a {
+        color: $darkBlue !important;
+      }
+    }
+
+    .input,
+    .textarea,
+    .select,
+    .select select {
+      &:after,
+      &:focus,
+      &:hover,
+      &:active,
+      &.is-active {
+        border-color: $darkBlue !important;
+      }
+    }
+
+    button.is-primary {
+      background-color: $darkBlue !important;
+    }
+
+    .tabs li.is-active a {
+      border-bottom-color: $darkBlue !important;
+      color: $darkBlue !important;
+    }
+
+    code {
+      background: $darkCode !important;
+      color: $lightCodeColor !important;
+    }
+
+    footer {
+      background: $darkFooter !important;
+
+      a {
+        color: $darkBlue !important;
+      }
+    }
+  }
 }
 
 .app {
@@ -70,8 +148,8 @@ pre {
 }
 
 code {
-  background: white;
-  color: black;
+  background: $lightCodeBackground;
+  color: $lightCodeColor;
 }
 
 .key {
